Fix Z-index home logo

--- a/src/web_modules/rank/_style.scss
+++ b/src/web_modules/rank/_style.scss
@@ -1,6 +1,3 @@
-body {
-  overflow: scroll !important;
-}
 
 .container {
     justify-content : center;
